--- a/css/style-timeline.css
+++ b/css/style-timeline.css
@@ -104,10 +104,12 @@ figure img:hover {
 }
 
 footer {
-    height: 10vh;
+    height: 15vh;
+    margin-bottom: 0;
     font-size: clamp(1rem, 1.5rem, 2rem);
     text-align: center;
-    background: linear-gradient(rgba(18, 18, 171), purple);
+    background: linear-gradient(purple, rgba(18, 18, 171));
+    opacity: 0.8;
 }
 
 @media (min-width: 600px) and (max-width: 912px) {
